--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,12 @@ h3 {
   font-weight: 400 !important;
 }
 
+.credit-link {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .project-credit strong {
   font-weight: 700;
 }
@@ -388,6 +394,8 @@ h3 {
     /* Push to bottom naturally */
     pointer-events: auto;
     /* Normal interaction in flow */
+    text-align: center;
+    /* Center-align on mobile */
   }
 
   .container {
@@ -459,4 +467,9 @@ h3 {
   .card {
     padding: 1.5rem;
   }
+}
+
+.generator-wrapper {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
